--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -6,7 +9,7 @@ body {
 
 .chat-container {
   width: 100%;
-  min-height: 100svh;
+  min-height: 100vh;
   background: white;
   display: flex;
   flex-direction: column;
@@ -95,6 +98,7 @@ body {
 .chat-box {
   -webkit-overflow-scrolling: touch;
 }
+
 
 
 
